# CAMM3

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  release.yml
app/: CMakeLists.txt  main.cpp  resources.qrc
app/icons/: CAMM3.icns  CAMM3.rc
core/: CMakeLists.txt  Geometry.h  HpglEmitter.cpp  HpglEmitter.h  HpglParser.cpp  HpglParser.h  PlotJob.cpp  PlotJob.h  Settings.cpp  Settings.h
core/transport/: FileTransport.cpp  FileTransport.h  IPlotterTransport.h  LptTransport.cpp  LptTransport.h  SerialTransport.cpp  SerialTransport.h
i18n/: CAMM3_en.ts  CAMM3_ru.ts
packaging/: README.md  linux.sh  macos.sh  windows.ps1
tests/: CMakeLists.txt  CutPipelineTest.cpp  FileTransportTest.cpp  HpglEmitterTest.cpp  HpglParserTest.cpp  SettingsTest.cpp
tests/data/: Untitled-1.plt
ui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  PlotView.cpp  PlotView.h  SettingsDialog.cpp  SettingsDialog.h
ui/resources/: icons.qrc
